--- a/src/app/blog/blog.page.html
+++ b/src/app/blog/blog.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="padding_todos_iguales">
     <ion-buttons mode="md" slot="start">
       <!--ion-back-button mode="md" text="Back" color="dark"></!--ion-back-button-->
       <ion-button (click)="onClick()" fill="clear">
@@ -21,7 +21,7 @@
 
 <ion-content>
   <ion-grid class="ion-no-padding">
-    <ion-row  class="padding_espacio">
+    <ion-row  class="padding_todos_iguales">
       <ion-col size="12" class="ion-text-center">
         <ion-text>
           <h1 class="color_titulos">
