--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="padding_todos_iguales">
     <ion-buttons mode="md" slot="start">
       <!--ion-back-button mode="md" text="Back" color="dark"></!--ion-back-button-->
       <ion-button (click)="onClick()" fill="clear">
@@ -23,7 +23,7 @@
 
 <ion-content>
   <ion-grid class="padding_cero">
-    <ion-row class="ion-padding-start ion-margin-top ion-padding-end">      
+     <ion-row class="padding_todos_iguales ion-margin-top">      
       <ion-col size="12" id="subir_mesyear">
         <ion-row>
           <ion-col size="2" text-center class="ion-margin-bottom">
