--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -1,5 +1,5 @@
 <ion-header translucent="true">
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="padding_todos_iguales">
     <ion-buttons mode="md" slot="start">
       <ion-button fill="clear" (click)="onClick ()">
         Atras
