--- a/src/app/creditos/creditos.page.html
+++ b/src/app/creditos/creditos.page.html
@@ -5,7 +5,7 @@
         <ion-col size="5" size-sm="3">
           <ion-img :src="assets/img/Imagen-25.png"></ion-img>
         </ion-col>
-        <ion-col size="2" size-sm="1" offset="5" offset-sm="8" class="ion-text-right">
+        <ion-col size="2" size-sm="1" offset="5" offset-sm="8">
           <button class="btn_menu" (click)="go_home ()">
             <ion-icon name="close"></ion-icon>
           </button>
