--- a/src/app/report-provider/report-provider.page.html
+++ b/src/app/report-provider/report-provider.page.html
@@ -9,7 +9,7 @@
 </ion-header> 
 
 <ion-content [className]="type === 0 ? 'ion-content-black' : 'ion-content-green'">
-  <ion-grid class="padding_cero">
+  <ion-grid class="padding_todos_iguales">
     <ion-row>
       <ion-col size="12">
         <ion-item lines="none" [className]="type === 0 ? 'item-header ion-text-center item-header-black' : 'item-header ion-text-center item-header-green'">
