--- a/src/app/turismo-circuito/turismo-circuito.page.scss
+++ b/src/app/turismo-circuito/turismo-circuito.page.scss
@@ -32,11 +32,11 @@
 }
 @media(min-width: 1024px){
     .btn_menu{
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
     }
     .div_linea_color{
-        height: 4px;
+        height: 2px;
     }
 }
 .color_titulos{
@@ -278,4 +278,41 @@ ion-card-content{
 button:focus{
     outline:none;
     box-shadow:none;
+}
+.padding_todos_iguales
+{
+    padding-left: 16px;
+    padding-right: 16px;
+}
+@media(min-width: 568px)
+{
+    .padding_todos_iguales
+   {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+@media(min-width: 731px)
+{
+    .padding_todos_iguales
+   {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+}
+@media(min-width: 768px)
+{
+    .descripcion_completo
+    {
+    display: -webkit-box;
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 145px;
+   }
+   .margin_left_riht
+   {
+       padding-left: 8px;
+       padding-right: 8px;
+   }
 }
