--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@ ion-header, ion-toolbar{
     border-radius: 50%;
     background-color: #ffffff;
     padding-top: 2px;
-    margin-top: 0px;
+    margin-top: 7px;
 }
 ion-icon{
     color: #676767;
@@ -33,7 +33,7 @@ ion-icon{
         height: 12vh;
     }
     .btn_menu{
-        margin-top: 9px;
+        margin-top: 13px;
     }
 }
 @media(min-width: 411px) and (min-height: 823px){
@@ -41,7 +41,7 @@ ion-icon{
         height: 12vh;
     }
     .btn_menu{
-        margin-top: 9px;
+        margin-top: 13px;
     }
 }
 @media(min-width: 480px) and (min-height: 320px){
@@ -64,7 +64,7 @@ ion-icon{
         height: 28vh;
     }
     .btn_menu{
-        margin-top: 9px;
+        margin-top: 15px;
     }
 }
 @media(min-width: 731px){
@@ -72,7 +72,7 @@ ion-icon{
         height: 25vh;
     }
     .btn_menu{
-        margin-top: 9px;
+        margin-top: 15px;
     }
 }
 @media(min-width: 736px){
@@ -80,7 +80,7 @@ ion-icon{
         height: 25vh;
     }
     .btn_menu{
-        margin-top: 9px;
+        margin-top: 15px;
     }
 }
 @media(min-width: 768px){
@@ -114,6 +114,11 @@ ion-icon{
         margin-left: -6px;
         margin-top: -2px;
     }
+    .btn_menu
+    {
+        margin-top: 31px;
+        margin-left: -40px;
+    }
 }
 @media(min-width: 1024px) and (min-height: 1366px){
     ion-header, ion-toolbar{
@@ -123,6 +128,11 @@ ion-icon{
         font-size: 25px;
         margin-left: -6px;
         margin-top: -2px;
+    }
+    .btn_menu
+    {
+        margin-top: 31px;
+        margin-left: -40px;
     }
 }
 @media(min-width: 1366px){
