--- a/src/app/energency-direct/energency-direct.page.html
+++ b/src/app/energency-direct/energency-direct.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="padding_todos_iguales">
     <ion-buttons mode="md" slot="start">
       <!--ion-back-button mode="md" text="Back" color="dark"></!--ion-back-button-->
       <ion-button (click)="onClick()" fill="clear">
