--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -44,22 +44,38 @@
     font-size: 1.125rem;
     font-family: 'Roboto', sans-serif;
 }
+@media(min-width: 812px)
+{
+    .color_descripcion_blanco{
+        margin-top: 6rem;
+    }
+}
 @media(min-width: 1024px){
     .color_descripcion_blanco{
         font-size: 2.125rem;
     }
 }
 .bajar_imagen_logo{
-    margin-top: -3rem;
+    margin-top: 5rem;
 }
 @media(min-width: 360px){
     .bajar_imagen_logo{
-        margin-top: -6rem;
+        margin-top: 4rem;
     }
 }
 @media(min-width: 568px){
     .bajar_imagen_logo{
-        margin-top: -1rem;
+        margin-top: 6rem;
+    }
+}
+@media(min-width: 812px){
+    .bajar_imagen_logo{
+        margin-top: 11rem;
+    }
+}
+@media(min-width: 1024px){
+    .bajar_imagen_logo{
+        margin-top: 4rem;
     }
 }
 .btn_menu {
@@ -71,8 +87,8 @@
     background-color: #ffffff;
     padding-top: 2px;
     z-index: 9999;
-    top: 12px;
-    right: 12px;
+    top: 17px;
+    right: 29px;
 }
 .div_linea_color{
     height: 1px;
@@ -87,8 +103,8 @@
 }
 @media(min-width: 411px){
     .btn_menu{
-        top: 12px;
-        right: 12px;
+        top: 24px;
+        right: 30px;
         width: 29px;
         height: 29px;
     }
@@ -112,7 +128,7 @@
     height: 1.375rem;
     color: #505050;
     font-family: 'Roboto', sans-serif;
-    padding-left: 1rem;
+    --padding-start: 1rem;
 }
 #input_border_left::placeholder{
     color: #505050;
@@ -121,7 +137,7 @@
 @media(min-width: 768px){
     #input_border_left{
         height: 2.1875rem;
-        padding-left: 1rem;
+        --padding-start: 1rem;
     } 
 }
 
@@ -144,7 +160,7 @@
 }
 @media(min-width: 768px){
     .fondo_blanco{
-        margin-top: -2.6875rem;
+        margin-top: -1rem;
         padding-top: 0.9375rem;
         padding-bottom: 0.9375rem;
         padding-left: 1.875rem;
@@ -259,7 +275,7 @@ button:focus{
     padding-bottom: 0;
 }
 .margin_bottom_escpacio{
-    margin-bottom: 1rem;
+    margin-bottom: 0.1875rem;
 }
 #fondo_boleto_img{
     --background: none;
@@ -326,18 +342,23 @@ button:focus{
 }
 .flechas_tamaño_calender{
     width: 30%;
-    height: 25%;
+    height: 32%;
     background-color: #ffffff;
-    margin-top: 10px;
+    margin-top: 5px;
+}
+@media(min-width: 568px){
+    .flechas_tamaño_calender{
+        margin-top: 0.5rem;
+    } 
 }
 @media(min-width: 640px){
     .flechas_tamaño_calender{
-        margin-top: 0.8125rem;
+        margin-top: 0.125rem;
     } 
 }
 @media(min-width: 768px){
     .flechas_tamaño_calender{
-        margin-top: 3px;
+        margin-top: 7px;
         width: 19%;
         height: 44%;
     } 
@@ -345,8 +366,8 @@ button:focus{
 @media(min-width: 1024px){
     .flechas_tamaño_calender{
         margin-top: 0px;
-        width: 26%;
-        height: 2.8125rem;
+        width: 18%;
+        height: 50%;
     } 
 }
 #diciembre_year{
@@ -686,10 +707,10 @@ ion-card-content{
         font-size: 22px;
     }
     .descrip_pequeña{
-        font-size: 17px;
+        font-size: 14px;
     }
     .numero_color{
-        font-size: 16px;
+        font-size: 14px;
     }
     .margin_bottom{
         margin-bottom: 22px;
@@ -755,5 +776,42 @@ ion-card-content{
 }
 .habrir_espacios{
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+}
+.padding_todos_iguales
+{
+    padding-left: 16px;
+    padding-right: 16px;
+}
+@media(min-width: 568px)
+{
+    .padding_todos_iguales
+   {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+@media(min-width: 731px)
+{
+    .padding_todos_iguales
+   {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+}
+@media(min-width: 768px)
+{
+    .descripcion_completo
+    {
+    display: -webkit-box;
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 150px;
+   }
+   .margin_left_riht
+   {
+       padding-left: 8px;
+       padding-right: 8px;
+   }
 }
