--- a/src/app/search-results/search-results.page.html
+++ b/src/app/search-results/search-results.page.html
@@ -9,6 +9,7 @@
 </ion-header> 
 
 <ion-content>
+  <ion-grid class="padding_todos_iguales">
   <ion-row>
     <ion-col size="12">
       <ion-item class="ion-text-center" lines="none">
@@ -95,12 +96,12 @@
                 <ion-row>
                   <ion-col size="6">
                     <button class="btn_manos" id="like_bajo" (click)="open_report (item, 0)">
-                      <ion-img :src="assets/img/Imagen_38.png"></ion-img>
+                      <ion-img class="tamaño_manos" id="derecha_mano" :src="assets/img/Imagen_38.png"></ion-img>
                     </button>
                   </ion-col>
                   <ion-col size="6">
                     <button class="btn_manos" (click)="open_report (item, 1)">
-                      <ion-img :src="assets/img/Imagen_39.png"></ion-img>
+                      <ion-img class="tamaño_manos" id="izquierda_mano" :src="assets/img/Imagen_39.png"></ion-img>
                     </button>
                   </ion-col>
                 </ion-row>
@@ -350,4 +351,5 @@
       </ion-list>
     </ion-col>
   </ion-row>
+</ion-grid>
 </ion-content>
