--- a/src/app/turismo-circuito/turismo-circuito.page.html
+++ b/src/app/turismo-circuito/turismo-circuito.page.html
@@ -1,5 +1,5 @@
 <ion-header no-border>
-  <ion-toolbar mode="ios">
+  <ion-toolbar mode="ios" class="padding_todos_iguales">
     <ion-buttons mode="md" slot="start">
       <!--ion-back-button mode="md" text="Back" color="dark"></!--ion-back-button-->
       <ion-button (click)="onClick()" fill="clear">
@@ -20,7 +20,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid class="ion-no-padding">
+  <ion-grid class="padding_todos_iguales">
     <!--<ion-row class="padding_espacio">
       <ion-col size="5" size-sm="3">
         <ion-img :src="assets/img/dircetur@3x.png"></ion-img>
@@ -38,7 +38,7 @@
         <h1 class="color_titulos ion-text-lg-center">
           {{ 'TC.Turistical circuites in Cusco' | translate }}
         </h1>
-        <p class="descrip_color">
+        <p class="descrip_color ion-no-margin">
           La Dirección de Artesanía, es un Órgano de Línea de segundo nivel organizacional, responsable de proponer y ejecutar la política regional de desarrollo y promoción de la artesanía; así como fomentar las exportaciones de los productos artesanales, su sigla es DART.
         </p>
       </ion-col>
@@ -49,29 +49,29 @@
 
       <ion-col *ngIf="is_loading === false" size="12">
         <ion-row>
-          <ion-col *ngFor="let item of items" size="12" size-md="6" size-xl="4">
-            <ion-card (click)="view_circuito_detalle (item)">
+          <ion-col *ngFor="let item of items" class="ion-margin-top ion-margin-bottom margin_left_riht" size="12" size-md="6" size-xl="4">
+            <ion-card (click)="view_circuito_detalle (item)" style="height: 100%;">
               <ion-card-content>
                 <ion-row>
                   <ion-col size="12" class="dercha_izquierda_cero">
                     <ion-row>
                       <ion-col size="4">
-                        <img [src]="item.imagen" width="100%">
+                        <img [src]="item.imagen" width="100%" height="100%" style="object-fit: cover;">
                       </ion-col>
                       <ion-col size="8">
-                        <h2 class="titulo_card margin_bottom">{{ get_value (item, 'nombre') }}</h2>
-                        <p class="descrip_pequeña margin_bottom">{{ get_value (item, 'donde') }}</p>
+                        <h2 class="titulo_card margin_bottom" style="margin-top: -3px;">{{ get_value (item, 'nombre') }}</h2>
+                        <p class="descrip_pequeña ion-no-margin">{{ get_value (item, 'donde') }}</p>
                         <p class="numero_color">{{ get_value (item, 'altitud') }}</p>
                       </ion-col>
                     </ion-row>
                   </ion-col>
-                  <ion-col size="12" class="dercha_izquierda_cero">
+                  <!--<ion-col size="12" class="dercha_izquierda_cero">
                     <ion-row>
                       <ion-col *ngFor="let t of item.tags" size="4" size-sm="3" size-md="4" size-lg="3" size-xl="4">
                         <button class="btn_rojo_car">{{ t.nombre }}</button>
                       </ion-col>
                     </ion-row>
-                  </ion-col>
+                  </ion-col>-->
                   <ion-col size="12">
                     <p class="descripcion_completo">{{ get_value (item, 'descripcion') }}</p>
                   </ion-col>
