--- a/src/app/boleto-turistico/boleto-turistico.page.html
+++ b/src/app/boleto-turistico/boleto-turistico.page.html
@@ -148,7 +148,7 @@
 
      <div *ngIf="is_loading === false" style="width: 100%;">
       <ion-row>
-      <ion-col *ngFor="let item of items" size="12" size-md="6" class=" ion-margin-top ion-margin-bottom">
+      <ion-col *ngFor="let item of items" size="12" size-md="6" class="" style="margin-top: 2px; margin-bottom: 2px;">
         <ion-card class="ion-no-margin alturar_igualar">
           <img [src]="item.imagen" class="sombra_car_img">
           <ion-card-content class="padding_top_car_conten cantidad_datos">
