--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -104,7 +104,7 @@
           <p id="diciembre_year">{{ get_calendar_header () }}</p>
         </ion-col>
         <ion-col size="2">
-          <button class="flechas_tamaño_calender padding_cero" (click)="change_month (+1)">
+          <button *ngIf="check_next_button ()" class="flechas_tamaño_calender padding_cero" (click)="change_month (+1)">
             <img src="assets/img/icono-izquierda.png" width="100%" height="100%">
           </button>
         </ion-col>
