--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -35,7 +35,7 @@
             <p id="diciembre_year"><span id="mes_color">{{ get_current_date_format ("MMM") }} </span><span id="year_number">{{ get_current_date_format ("YYYY") }}</span></p>
           </ion-col>
           <ion-col size="2" text-center class="ion-margin-bottom">
-            <button class="flechas_tamaño_calender padding_cero" (click)="change_month (+1)">
+            <button *ngIf="check_next_button ()" class="flechas_tamaño_calender padding_cero" (click)="change_month (+1)">
               <img src="assets/img/icono-izquierda.png" width="100%" height="100%">
             </button>
           </ion-col>
